name:                wienersalonensemble
version:             0.1.0.0
license:             MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.16

executable webpage
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:
      base       >= 4.6
    , containers >= 0.5
    , pandoc     >= 1.11
    , hakyll     >= 4.3
